# unnamed-launcher

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py  unnamed-launcher.spec
.github/: release.md
.github/workflows/: build-executable.yml  build-executable.yml.disabled
unnamed/: __init__.py  __main__.py  events.py  helpers.py  helpers.pyx  main.py  main.pyx  resources.py  resources.qrc  th_crap.py
unnamed/events/: __init__.py  actionbar.py  base.py  init.py  settings_tab.py  thcrap.py
unnamed/resources/: translation.ja_JP.qm  translation.ja_JP.ts  translations.qm  translations.ts
unnamed/thcrap/: __init__.py  config.py  repo.py
unnamed/ui/: AboutDialog.ui  GameSetting.ui  MainMenu.ui
