[tool.poetry]
name = "unnamed-launcher"
version = "0.1.0"
description = ""
authors = ["Sophie Cheung <me@kcomain.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
PySide6 = "^6.1.2"

[tool.poetry.dev-dependencies]
ipython = "^7.26.0"
pyinstaller = "^4.5.1"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
