[tool.poetry]
name = "unnamed-launcher"
version = "0.1.0"
description = ""
authors = ["Sophie Cheung <me@kcomain.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
PySide6 = "^6.1.2"
requests = "^2.26.0"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
ipython = "^7.26.0"
black = "^21.7b0"
pyinstaller = "^4.5.1"
isort = "^5.9.3"
commitizen = "^2.17.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
